--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Navbar -->
     <header>
         <nav>
-            <div class="nav-left">A</div>
+            <div class="nav-left"><a href="#">A</a></div>
             <div class="nav-right">
                 <a href="#projects">Projects</a>
                 <a href="#skills">Skills</a>
@@ -51,26 +51,31 @@
         <h2>Projects</h2>
         <div class="projects-container">
             <div class="projects-wrapper">
-                <div class="project-card">
-                    <img src="images/3.png" alt="Project Image">
+                <a href="https://github.com/anshikkumartiwari/re-dact" class="project-card">
+                    <img src="images/proj1.png" alt="Project Image">
+                    <h3>Redaction Tool</h3>
+                    <p>Automated ML based redaction tool for texts and images</p>
+                </a>
+                <a href="https://github.com/anshikkumartiwari/siginature-detection" class="project-card">
+                    <img src="images/proj2.png" alt="Project Image">
                     <h3>Signature Detection</h3>
-                    <p>ML model that detects and <br>marks signatures</p>
-                </div>
-                <div class="project-card">
-                    <img src="images/3.png" alt="Project Image">
-                    <h3>Signature Detection</h3>
-                    <p>ML model that detects and <br>marks signatures</p>
-                </div>
-                <div class="project-card">
-                    <img src="images/3.png" alt="Project Image">
-                    <h3>Signature Detection</h3>
-                    <p>ML model that detects and <br>marks signatures</p>
-                </div>
-                <div class="project-card">
-                    <img src="images/3.png" alt="Project Image">
-                    <h3>Signature Detection</h3>
-                    <p>ML model that detects and <br>marks signatures</p>
-                </div>
+                    <p>ML model that detects and marks signatures</p>
+                </a>
+                <a href="https://github.com/anshikkumartiwari/clipboard-asked" class="project-card">
+                    <img src="images/proj3.png" alt="Project Image">
+                    <h3>AI Chrome Extension</h3>
+                    <p>Makes any text box in any website a virtual chatbox with AI</p>
+                </a>
+                <a href="https://github.com/anshikkumartiwari/shellwebviewer" class="project-card">
+                    <img src="images/proj4.png" alt="Project Image">
+                    <h3>Shell Web Viewer</h3>
+                    <p>A virtual web browser that can be launched from any CLI terminal without application installation.</p>
+                </a>
+                <a href="https://github.com/anshikkumartiwari/lsb-steganography" class="project-card">
+                    <img src="images/proj5.png" alt="Project Image">
+                    <h3>LSB Steganography</h3>
+                    <p>Steganography using least significant bits of pixels of a image.</p>
+                </a>
             </div>
         </div>
     </section>
