--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="profile-container">
             <img src="images/profile.jpg" alt="Profile Photo" class="profile-photo">
             <div class="profile-info">
-                <h1>hi I'm Anshik Kumar Tiwari👋</h1>
+                <h1>&lt;/hi&gt; I'm Anshik Kumar Tiwari👋</h1>
                 <p class="about-text">Aspiring Data Scientist and programming enthusiast.</p>
             </div>
         </div>
