added proj and minor fixes

--- a/index.html
+++ b/index.html
@@ -51,31 +51,37 @@
         <h2>Projects</h2>
         <div class="projects-container">
             <div class="projects-wrapper">
+                <a href="https://anshikkumartiwari.github.io/complex-mapping/" class="project-card">
+                    <img src="images/proj6.webp" alt="Project Image">
+                    <h3>Complex Mapping</h3>
+                    <p>Draw or input the function on the z Plane, and watch the mapping on the w Plane</p>
+                </a>
                 <a href="https://github.com/anshikkumartiwari/re-dact" class="project-card">
-                    <img src="images/proj1.png" alt="Project Image">
+                    <img src="images/proj1.webp" alt="Project Image">
                     <h3>Redaction Tool</h3>
                     <p>Automated ML based redaction tool for texts and images</p>
                 </a>
                 <a href="https://github.com/anshikkumartiwari/siginature-detection" class="project-card">
-                    <img src="images/proj2.png" alt="Project Image">
+                    <img src="images/proj2.webp" alt="Project Image">
                     <h3>Signature Detection</h3>
                     <p>ML model that detects and marks signatures</p>
                 </a>
                 <a href="https://github.com/anshikkumartiwari/clipboard-asked" class="project-card">
-                    <img src="images/proj3.png" alt="Project Image">
+                    <img src="images/proj3.webp" alt="Project Image">
                     <h3>AI Chrome Extension</h3>
                     <p>Makes any text box in any website a virtual chatbox with AI</p>
                 </a>
                 <a href="https://github.com/anshikkumartiwari/shellwebviewer" class="project-card">
-                    <img src="images/proj4.png" alt="Project Image">
+                    <img src="images/proj4.webp" alt="Project Image">
                     <h3>Shell Web Viewer</h3>
-                    <p>A virtual web browser that can be launched from any CLI terminal without application installation.</p>
+                    <p>A virtual web browser that can be launched from any CLI terminal without application installation</p>
                 </a>
                 <a href="https://github.com/anshikkumartiwari/lsb-steganography" class="project-card">
-                    <img src="images/proj5.png" alt="Project Image">
+                    <img src="images/proj5.webp" alt="Project Image">
                     <h3>LSB Steganography</h3>
-                    <p>Steganography using least significant bits of pixels of a image.</p>
+                    <p>Steganography using least significant bits of pixels of a image</p>
                 </a>
+                
             </div>
         </div>
     </section>
@@ -136,6 +142,7 @@
                     <li><a href="https://pixelchase.42web.io" target="_blank">Try my Game</a></li>
                     <li><a href="https://in.pinterest.com/anshikkumartiwari/vellore-institute-of-technology-chennai/" target="_blank">VIT Chennai - My pinterst board</a></li>
                     <li><a href="https://anshikkumartiwari.github.io/old-portfolio/" target="_blank">Old Portfolio</a></li>
+                    <li><a href="https://anshikkumartiwari.github.io/complex-mapping/" target="_blank" style="color: #fff;">Function Complex Mapping Visualizer</a></li>
                 </ul>
             </div>
         </div>
@@ -144,7 +151,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>© 2025 @anshikkumartiwari</p>
+        <p>&copy;2025 by Anshik Kumar Tiwari. All rights reserved.</p>
     </footer>
 
     <!-- JavaScript Files -->
