--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy;2025 by Anshik Kumar Tiwari. All rights reserved.</p>
+        <p>&copy;<code>2025</code> <i>by</i> Anshik Kumar Tiwari. All rights reserved.</p>
     </footer>
 
     <!-- JavaScript Files -->
