some bugs again, fixed

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <a href="https://github.com/anshikkumartiwari" target="_blank">
                     <img src="assets/icons/github.svg" alt="GitHub">@anshikkumartiwari
                 </a>
-                <a href="https://in.linkedin.com/in/anshik-kumar-tiwari" target="_blank">
+                <a href="https://in.linkedin.com/in/anshik-kumar-tiwari" target="_blank" >
                     <img src="assets/icons/linkedin.svg" alt="LinkedIn">LinkedIn
                 </a>
                 <a href="mailto:anshikkumartiwari@gmail.com">
@@ -142,17 +142,17 @@
                     <li><a href="https://pixelchase.42web.io" target="_blank">Try my Game</a></li>
                     <li><a href="https://in.pinterest.com/anshikkumartiwari/vellore-institute-of-technology-chennai/" target="_blank">VIT Chennai - My pinterst board</a></li>
                     <li><a href="https://anshikkumartiwari.github.io/old-portfolio/" target="_blank">Old Portfolio</a></li>
-                    <li><a href="https://anshikkumartiwari.github.io/complex-mapping/" target="_blank" style="color: #fff;">Function Complex Mapping Visualizer</a></li>
+                    <li><a href="https://anshikkumartiwari.github.io/complex-mapping/" target="_blank">Function Complex Mapping Visualizer</a></li>
                 </ul>
             </div>
         </div>
+        <!-- Footer -->
+        <footer>
+            <p>&copy;<code>2025</code> <i>by</i> Anshik Kumar Tiwari. All rights reserved.</p>
+        </footer>
     </section>
 
 
-    <!-- Footer -->
-    <footer>
-        <p>&copy;<code>2025</code> <i>by</i> Anshik Kumar Tiwari. All rights reserved.</p>
-    </footer>
 
     <!-- JavaScript Files -->
     <script src="script.js"></script>
