--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
                 <a href="mailto:anshikkumartiwari@gmail.com">
                     <img src="assets/icons/mail.svg" alt="Email">anshikkumartiwari@gmail.com
                 </a>
-                <a href="https://instagram.com/yourprofile" target="_blank">
+                <a href="https://instagram.com/@anshikkumartiwari" target="_blank">
                     <img src="assets/icons/ig.svg" alt="Instagram">@anshikkumartiwari
                 </a>
-                <a href="https://x.com/yourprofile" target="_blank">
+                <a href="https://x.com/anshik_t" target="_blank">
                     <img src="assets/icons/x.svg" alt="X (Twitter)">
                 </a>
                 <a href="https://www.quora.com/profile/Anshik-Kumar-Tiwari" target="_blank">
