--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 <a href="mailto:anshikkumartiwari@gmail.com">
                     <img src="assets/icons/mail.svg" alt="Email">anshikkumartiwari@gmail.com
                 </a>
-                <a href="https://instagram.com/@anshikkumartiwari" target="_blank" rel="noopener">
+                <a href="https://instagram.com/anshikkumartiwari" target="_blank" rel="noopener">
                     <img src="assets/icons/ig.svg" alt="Instagram">@anshikkumartiwari
                 </a>
                 <a href="https://x.com/anshik_t" target="_blank" rel="noopener">
